--- a/.github/workflows/Sonar.yml
+++ b/.github/workflows/Sonar.yml
@@ -1,42 +1,54 @@
-- name: Checkout code
-  uses: actions/checkout@v4
+name : SonarQubeConsole
 
-- name: Setup Java
-  uses: actions/setup-java@v4
-  with:
-    java-version: '21'
-    distribution: 'corretto'
+on:
+  push:
+    branches:
+      - appliConsole
+jobs:
+  Test:
+    name: Test
+    runs-on: ubuntu-latest
 
-- name: Cache Gradle packages
-  uses: actions/cache@v4
-  with:
-    path: |
-      ~/.gradle/caches
-      ~/.gradle/wrapper
-    key: ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle*') }}
-    restore-keys: |
-      ${{ runner.os }}-gradle-
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-- name: Cache SonarQube packages
-  uses: actions/cache@v4
-  with:
-    path: ~/.sonar/cache
-    key: ${{ runner.os }}-sonar
-    restore-keys: |
-      ${{ runner.os }}-sonar
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'corretto'
 
-- name: Cache Maven packages
-  uses: actions/cache@v4
-  with:
-    path: ~/.m2
-    key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-    restore-keys: |
-      ${{ runner.os }}-m2
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-- name: Change directory to ProjetGla
-  run: cd YliesChementel/ProjetGLA/ProjetGla
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: |
+            ${{ runner.os }}-sonar
 
-- name: Build with Maven
-  env:
-    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=$(echo ${{ github.repository }} | sed 's-/-_-')
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-m2
+
+      - name: Change directory to ProjetGla
+        run: cd YliesChementel/ProjetGLA/ProjetGla
+
+      - name: Build with Maven
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=$(echo ${{ github.repository }} | sed 's-/-_-')
