--- a/.github/workflows/Sonar.yml
+++ b/.github/workflows/Sonar.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           java-version: '21'
           distribution: 'corretto'
-
+      - name: List files
+        run: ls -R
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
