Modification de Sonar.yml pour appliquer l'action sur un push de la branche main

--- a/.github/workflows/Sonar.yml
+++ b/.github/workflows/Sonar.yml
@@ -3,7 +3,7 @@ name : SonarQubeConsole
 on:
   push:
     branches:
-      - appliConsole
+      - main
 jobs:
   build:
     name: Build and analyze
