--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </properties>
 
     <build>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
