--- a/.github/workflows/PerformanceTest.yml
+++ b/.github/workflows/PerformanceTest.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Start Flask server
         run: |
           nohup python run.py & echo $! > flask_pid
-      env:
-        FLASK_APP: run.py
-        FLASK_ENV: production
+        env:
+          FLASK_APP: run.py
+          FLASK_ENV: production
 
       - name: Wait for Flask to start
         run: |
-          sleep 5  # Attendez quelques secondes pour que le serveur démarre
+          sleep 5
 
       - name: Run Locust tests
         run: |
