--- a/.github/workflows/PerformanceTest.yml
+++ b/.github/workflows/PerformanceTest.yml
@@ -36,10 +36,17 @@ jobs:
         run: |
           sleep 5
 
-      - name: Run Locust tests
+      - name: Run Locust tests and save results
         run: |
           locust -f locustWeb.py --headless -u 10 -r 2 --run-time 1m --host=http://127.0.0.1:5000 --csv=locust_report
+
+      - name: Upload Locust report
+        uses: actions/upload-artifact@v3
+        with:
+          name: locust-report
+          path: locust_report*
 
       - name: Stop Flask server
         run: |
           kill $(cat flask_pid)
+
