--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
-# Variables d'environnement pour l'application Flask
 SECRET_KEY=your_secret_key
-SQLALCHEMY_DATABASE_URI=sqlite:///Utilisateur.db
-
-# Informations de connexion pour l'email
+DATABASE_URL=sqlite:///Utilisateur.db
 EMAIL_USER=cryptofrontiersnotif@gmail.com
 EMAIL_PASSWORD=wgks xsao gjkx npqq 
