--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,50 @@
 APScheduler==3.11.0
 backports.zoneinfo==0.2.1
 blinker==1.8.2
+Brotli==1.1.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
-flask==3.0.3
+ConfigArgParse==1.7
+exceptiongroup==1.2.2
+Flask==3.0.3
+Flask-Cors==5.0.0
 Flask-Login==0.6.3
-flask-sqlalchemy==3.1.1
+Flask-SQLAlchemy==3.1.1
+gevent==24.2.1
+geventhttpclient==2.0.12
 greenlet==3.1.1
+idna==3.10
 importlib-metadata==8.5.0
+iniconfig==2.0.0
 itsdangerous==2.2.0
-jinja2==3.1.5
+Jinja2==3.1.5
 joblib==1.4.2
+locust==2.25.0
 MarkupSafe==2.1.5
+msgpack==1.1.0
 numpy==1.24.4
 packaging==24.2
+pkg_resources==0.0.0
 plotly==5.24.1
+pluggy==1.5.0
+psutil==6.1.1
+pytest==8.3.4
+python-dotenv==1.0.1
+pyzmq==26.2.0
+requests==2.32.3
+roundrobin==0.0.4
 scikit-learn==1.3.2
 scipy==1.10.1
+six==1.17.0
 SQLAlchemy==2.0.36
 tenacity==9.0.0
 threadpoolctl==3.5.0
+tomli==2.2.1
 typing-extensions==4.12.2
 tzlocal==5.2
-werkzeug==3.0.6
+urllib3==2.2.3
+Werkzeug==3.0.6
 zipp==3.20.2
+zope.event==5.0
+zope.interface==7.2
