--- a/.github/workflows/PerformanceTest.yml
+++ b/.github/workflows/PerformanceTest.yml
@@ -32,7 +32,7 @@ jobs:
           FLASK_APP: run.py
           FLASK_ENV: production
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          SQLALCHEMY_DATABASE_URI: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
+          DATABASE_URL: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
           API_KEY: ${{ secrets.API_KEY }}
 
       - name: Wait for Flask to start
