--- a/AppConsole/Dockerfile
+++ b/AppConsole/Dockerfile
@@ -10,15 +10,13 @@ COPY src ./src
 
 RUN mvn clean package -DskipTests
 
-RUN ls -l /appConsole/target/
-
 FROM openjdk:17-slim
 
 WORKDIR /appConsole
 
 COPY --from=build /appConsole/target/ProjetGLA-1.0-SNAPSHOT.jar /appConsole/app.jar
 
-COPY instance/Crypto.db /appConsole/instance/Crypto.db
+ENV DB_PATH /shared/instance/Crypto.db
 
 EXPOSE 8080
 
