--- a/AppWeb/Dockerfile
+++ b/AppWeb/Dockerfile
@@ -5,5 +5,6 @@ RUN apt-get update && \
 WORKDIR /app
 COPY  . /app
 RUN pip install --no-cache-dir -r ./requirements.txt
+ENV DB_PATH /shared/instance/Crypto.db
 EXPOSE 5000
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
+CMD ["python3", "run.py"]
