--- a/.github/workflows/PerformanceTest.yml
+++ b/.github/workflows/PerformanceTest.yml
@@ -33,6 +33,7 @@ jobs:
           FLASK_ENV: production
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DATABASE_URL: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
+          DB_PATH: ${{ secrets.DB_PATH }}
           API_KEY: ${{ secrets.API_KEY }}
 
       - name: Wait for Flask to start
