--- a/.github/workflows/PerformanceTest.yml
+++ b/.github/workflows/PerformanceTest.yml
@@ -39,7 +39,7 @@ jobs:
           FLASK_ENV: production
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DATABASE_URL: ${{ secrets.SQLALCHEMY_DATABASE_URI }}
-          DB_PATH: /home/runner/work/ProjetGLA/ProjetGLA/instance/Crypto.db
+          DB_PATH: ${{ secrets.DB_PATH }}
           API_KEY: ${{ secrets.API_KEY }}
 
       - name: Wait for Flask to start
