--- a/.github/workflows/PythonTest.yml
+++ b/.github/workflows/PythonTest.yml
@@ -25,4 +25,4 @@ jobs:
           pip install pytest pytest-cov
 
       - name: Run tests
-        run: pytest --cov=app tests/
+        run: PYTHONPATH=/mnt/c/Users/ylies/ProjetGLA/AppWeb pytest --cov=app tests/
