--- a/.github/workflows/PythonTest.yml
+++ b/.github/workflows/PythonTest.yml
@@ -25,7 +25,7 @@ jobs:
           pip install pytest pytest-cov
       
       - name: Check database 
-        run: ls -l ProjetGLA/instance/Crypto.db
+        run: ls ProjetGLA/
       
       - name: Check database file
         run: ls -l ProjetGLA/instance/Crypto.db
