Ajout de la variable actions dans la pipeline

--- a/.github/workflows/PythonTest.yml
+++ b/.github/workflows/PythonTest.yml
@@ -34,3 +34,4 @@ jobs:
         run: PYTHONPATH=AppWeb pytest --cov=app AppWeb/tests/
         env:
           DB_PATH: ${{ secrets.DB_PATH }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
