modification de la pipeline pour upload les rapports de test

--- a/.github/workflows/PythonTest.yml
+++ b/.github/workflows/PythonTest.yml
@@ -23,15 +23,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r ./AppWeb/requirements.txt
           pip install pytest pytest-cov
-      
-      - name: Check database 
-        run: ls
-      
-      - name: Check database file
-        run: ls -l instance/Crypto.db
 
       - name: Run tests
         run: PYTHONPATH=AppWeb pytest --cov=app AppWeb/tests/
         env:
           DB_PATH: ${{ secrets.DB_PATH }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: reports/htmlcov/
