correction de l'url de travail de la pipeline

--- a/.github/workflows/JavaTest.yml
+++ b/.github/workflows/JavaTest.yml
@@ -28,6 +28,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Run tests and generate coverage
+        working-directory: AppConsole
         run: mvn clean test jacoco:report
 
       - name: Upload coverage report
